--- a/postcards/package.json
+++ b/postcards/package.json
@@ -22,6 +22,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-spinners": "^0.3.2",
     "react-time": "^4.3.0",
     "styled-components": "^3.2.6"
   },
