--- a/postcards/package.json
+++ b/postcards/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "1.1.1",
     "react-spinners": "^0.3.2",
     "react-time": "^4.3.0",
+    "react-toastify": "^4.0.1",
     "styled-components": "^3.2.6"
   },
   "scripts": {
